tests/e2e/gateway-configmaps/00-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ssg
data:
  ACCEPT_LICENSE: "true"
  EXTRA_JAVA_ARGS: -Dcom.l7tech.bootstrap.autoTrustSslKey=trustAnchor,TrustedFor.SSL,TrustedFor.SAML_ISSUER
    -Dcom.l7tech.server.audit.message.saveToInternal=false -Dcom.l7tech.server.audit.admin.saveToInternal=false
    -Dcom.l7tech.server.audit.system.saveToInternal=false -Dcom.l7tech.server.audit.log.format=json
    -Djava.util.logging.config.file=/opt/SecureSpan/Gateway/node/default/etc/conf/log-override.properties
    -Dcom.l7tech.server.pkix.useDefaultTrustAnchors=true -Dcom.l7tech.security.ssl.hostAllowWildcard=true
  SSG_CLUSTER_HOST: "gateway.brcmlabs.com"
  SSG_JVM_HEAP: 2g
  SSG_DATABASE_JDBC_URL: "jdbc:mysql://cluster1-haproxy.pxc.svc.cluster.local:3306/ssg"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ssg-cwp-bundle
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ssg-system
data:
  system.properties: |-
    com.l7tech.server.extension.sharedKeyValueStoreProvider=embeddedhazelcast
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ssg-listen-port-bundle
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ssg-gateway-files
data:
  log-override-properties: |-
    com.l7tech.level = INFO
    com.l7tech.server.policy.variable.ServerVariables.level = SEVERE
